<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#333333"
        tools:context=".Mangas">

        <TextView
            android:id="@+id/lblPesquisarQuadrinhos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/lblPesquisarQuadrinhos"
            android:textColor="#FFFFFF"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblDigitePesquisarQuadrinhos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="32dp"
            android:text="@string/lblDigitePesquisarQuadrinhos"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblPesquisarQuadrinhos" />

        <EditText
            android:id="@+id/txtQuadrinhos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/txtQuadrinhos"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#808080"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblDigitePesquisarQuadrinhos" />

        <TextView
            android:id="@+id/txtInformacao1Q"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtQuadrinhos" />

        <TextView
            android:id="@+id/txtInformacao3Q"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInformacao1Q" />

        <Button
            android:id="@+id/btnSalvarInfoManga"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="41dp"
            android:onClick="SalvarInfoManga"
            android:text="@string/SalvarInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBackupManga" />

        <Button
            android:id="@+id/btnPesquisarQ"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="40dp"
            android:onClick="pesquisarMangas"
            android:text="@string/btnPesquisar"
            app:layout_constraintEnd_toStartOf="@+id/btnPesquisarQ2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInformacao3Q" />

        <Button
            android:id="@+id/btnPesquisarQ2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="41dp"
            android:onClick="MaisInformacoes"
            android:text="@string/btnVoltar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnPesquisarQ"
            app:layout_constraintTop_toBottomOf="@+id/txtInformacao3Q" />

        <Button
            android:id="@+id/btnCarregarInfoManga"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="41dp"
            android:onClick="CarregarInfoManga"
            android:text="@string/CarrgarInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPesquisarQ2" />

        <Button
            android:id="@+id/btnBackupManga"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="32dp"
            android:text="@string/FazerBackup"
            app:layout_constraintEnd_toStartOf="@+id/btnCarregarInfoManga"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPesquisarQ" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>