<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#333333"
        tools:context=".Animes">

        <TextView
            android:id="@+id/lblPesquisarHerois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/lblPesquisarHerois"
            android:textColor="#FFFFFF"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblDigitePesquisarHerois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="32dp"
            android:text="@string/lblDigitePesquisarHerois"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblPesquisarHerois" />

        <EditText
            android:id="@+id/txtNomeHeroi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/txtNomeHeroi"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#808080"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblDigitePesquisarHerois" />

        <Button
            android:id="@+id/btnPesquisarH"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="40dp"
            android:onClick="pesquisarHerois"
            android:text="@string/btnPesquisar"
            app:layout_constraintEnd_toStartOf="@+id/btnPesquisarH2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInformacaoHeroi3" />

        <Button
            android:id="@+id/btnPesquisarH2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="41dp"
            android:onClick="MaisInformacoes"
            android:text="@string/btnVoltar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnPesquisarH"
            app:layout_constraintTop_toBottomOf="@+id/txtInformacaoHeroi3" />

        <TextView
            android:id="@+id/txtInformacaoHeroi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNomeHeroi" />

        <TextView
            android:id="@+id/txtInformacaoHeroi3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInformacaoHeroi" />

        <Button
            android:id="@+id/btnSalvarInfoAnime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="41dp"
            android:onClick="SalvarInfoAnime"
            android:text="@string/SalvarInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCarregarInfoAnime" />

        <Button
            android:id="@+id/btnCarregarInfoAnime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="41dp"
            android:onClick="CarregarInfoAnime"
            android:text="@string/CarrgarInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPesquisarH2" />

        <Button
            android:id="@+id/btnBackup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="32dp"
            android:onClick="backupAnime"
            android:rotationX="0"
            android:text="@string/FazerBackup"
            app:layout_constraintEnd_toStartOf="@+id/btnCarregarInfoAnime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPesquisarH" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>