<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    tools:context=".Localizacao">

    <TextView
        android:id="@+id/lblSaberLocalizacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSaberLocalizacao"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/lblEndereco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPesquisarLocalizacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPesquisar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEndereco" />

    <TextView
        android:id="@+id/lblEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblAperteComecar"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/btnPesquisarLocalizacao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSaberLocalizacao" />
</androidx.constraintlayout.widget.ConstraintLayout>